--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3426,5 +3426,20 @@
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
+
+
+        <!-- Pixelizer activity -->
+        <activity android:name=".Settings$PixelizerActivity"
+                  android:label="@string/pixelizer_title"
+                  android:icon="@drawable/ic_homepage_pixelizer"
+                  android:parentActivityName="com.android.settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.pixelizer.Pixelizer"/>
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/pixelizer_summary"/>
+        </activity>
     </application>
 </manifest>
